Bug 1949092 - Fix canOpenModalPicker for nested browsers + tests r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D238843